--- a/01_trabajo_final.qmd
+++ b/01_trabajo_final.qmd
@@ -296,7 +296,18 @@ kable(Betas, caption = "Tabla N°3: Coeficientes estimados del modelo") %>%
 as.numeric(coef(summary(m2))[, "Pr(>|t|)"])
 ```
 
-Todo: - Redactar intro con analisis descriptivo breve (chino) - Redactar punto 1 (chino) - Riedge y Lasso + redacción (Fede)
+A través de la Tabla N°3 se puede interpretar sobre nuestro modelo elegido:
+
+-   El valor estimado del intercepto es de 2.68 aproximadamente. Igual así, el pvalue resulta de no poder descartar la hipótesis de que el intercepto es igual a 0. Recordando la interpretación del mismo, se pensaría que es el valor de puntos promedio para 0 dobles, 0 triples, 0 robos y 0 juegos. Lo cual no resulta para nada ilógico pensar que este valor sea 0 en la realidad y que estadísticamente nos de dicho indicio.
+
+Los demás predictores tienen un pvalue <0.01, algunos con ordenes mucho menores, por lo que podemos rechazar la hipotesis de nulidad con bastante confianza. Respecto a sus valores predichos podemos decir que:
+
+-   Por cada doble convertido, los puntos promedio de cada jugadora aumentan en una suma de 2.40, manteniendose todas las demás variables constantes.
+-   Por cada triple convertido, los puntos promedio de cada jugadora aumentan en una suma de 3.46, manteniendose todas las demás variables constantes.
+-   Por cada robo conseguido, los puntos promedio de cada jugadora aumentan en una suma de 0.74, manteniendose todas las demás variables constantes.
+-   Por cada juego jugado, los puntos promedio de cada jugadora disminuyen en una suma de 0.51, manteniendose todas las demás variables constantes.
+
+Estas interpretaciones nos dejan insights interesantes de analizar. Si bien dobles y triples suman 2 y 3 puntos respectivamente en el juego, que el valor que afectan al promedio sea mayor puede estar indicando que en cierto modo, se absorbe esa probabilidad de libre comentada anteriormente. Lo mismo podemos pensar acerca del robo, ya que cuando se da el mismo, en el desorden del juego, es potable a que quien roba reciba una falta. Por último, el valor al aumentar la cantidad de juegos podría estar dando indicio de desgaste físico de las jugadoras.
 
 # Métodos de Regularización
 
